Fixes layout problem on register page.

--- a/sites/all/themes/ce_online_training_theme/scss/custom.scss
+++ b/sites/all/themes/ce_online_training_theme/scss/custom.scss
@@ -316,6 +316,11 @@ input.form-submit {
 
 }
 
+#user-register-form #edit-field-first-name {
+  clear: both;
+  padding-top: 1px;
+}
+
 
 #zone-footer {
   a{
